--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AlexKirilov/NodeJS/API v2"
+    "url": "github.com:AlexKirilov/NodeJS.git"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
