--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "main": "index.js",
   "author": "ALK",
   "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "github.com:AlexKirilov/NodeJS.git"
-  },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
@@ -18,8 +14,10 @@
     "eslint": "^7.14.0",
     "express": "^4.17.1",
     "express-validator": "^6.7.0",
+    "fs": "0.0.1-security",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.10.15",
+    "node-xlsx": "^0.15.0",
     "nodemon": "^2.0.6",
     "read-excel-file": "^4.1.0",
     "swagger-jsdoc": "^5.0.1",
