--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.14.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "express-validator": "^6.7.0",
     "fs": "0.0.1-security",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.10.15",
+    "multer": "^1.4.2",
     "node-xlsx": "^0.15.0",
     "nodemon": "^2.0.6",
     "read-excel-file": "^4.1.0",
