--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "author": "ALK",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.19.0",
     "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -16,17 +17,20 @@
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.7.0",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
-    "mongoose": "^5.10.15",
-    "nodemon": "^2.0.6",
+    "mongoose": "^5.11.13",
+    "nodemailer": "^6.4.17",
+    "nodemon": "^2.0.7",
     "read-excel-file": "^4.1.0",
     "swagger-jsdoc": "^5.0.1",
     "swagger-ui-express": "^4.1.5"
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "nodemon index.js",
-    "test": "swagger project test"
+    "start": "nodemon --exec babel-node index.js",
+    "test": "swagger project test",
+    "dev": "nodemon --exec babel-node index.js --trace-warnings"
   },
   "nodemonConfig": {
     "ignor": [
@@ -37,7 +41,14 @@
       "NODE_ENV": "development",
       "PORT": 4567,
       "HOST": "localhost",
-      "MONGODB_URI": "mongodb+srv://studentapitest:studentapitestadmin@studentapi.xqvch.mongodb.net/studentapi?retryWrites=true&w=majority"
+      "MONGODB_URI": "mongodb+srv://studentapitest:studentapitestadmin@studentapi.xqvch.mongodb.net/studentapi?retryWrites=true&w=majority",
+      "MONGODB_USERNAME": "alexkkirilovgames2@gmail.com",
+      "MONGODB_PASS": "AxelF0x1",
+      "CONF_KEY": "SomeStupidEncKey"
     }
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
