--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "mongoose": "^5.11.14",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
-    "read-excel-file": "^4.1.0",
-    "swagger-jsdoc": "^5.0.1",
+    "read-excel-file": "^5.0.0",
+    "swagger-jsdoc": "^6.0.2",
     "swagger-ui-express": "^4.1.6"
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "nodemon --exec babel-node index.js",
+    "start": "nodemon index.js --exec babel-node index.js",
     "test": "swagger project test",
     "dev": "nodemon --exec babel-node index.js --trace-warnings"
   },
@@ -48,7 +48,11 @@
     }
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/node": "^7.0.0",
+    "nodemon": "^1.18.4"
   }
 }
