--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "nodemon index.js --exec babel-node index.js",
+    "start": "babel-node index.js",
     "test": "swagger project test",
     "dev": "nodemon --exec babel-node index.js --trace-warnings"
   },
