--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.11.14",
+    "node": "^15.7.0",
     "nodemailer": "^6.4.17",
+    "npm": "^6.14.11",
     "read-excel-file": "^5.0.0",
     "swagger-jsdoc": "^6.0.2",
     "swagger-ui-express": "^4.1.6"
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "babel-node index.js",
+    "start": "nodemon --exec babel-node index.js",
     "test": "swagger project test",
     "dev": "nodemon --exec babel-node index.js --trace-warnings"
   },
