--- a/package.json
+++ b/package.json
@@ -34,11 +34,20 @@
     "ignor": [
       "node_modules/**/node_modules"
     ],
-    "delay": 2500
+    "delay": 2500,
+    "env": {
+      "NODE_ENV": "development",
+      "PORT": 4567,
+      "HOST": "localhost",
+      "MONGODB_URI": "mongodb+srv://studentapitest:studentapitestadmin@studentapi.xqvch.mongodb.net/studentapi?retryWrites=true&w=majority",
+      "MONGODB_USERNAME": "alexkkirilovgames2@gmail.com",
+      "MONGODB_PASS": "AxelF0x1",
+      "CONF_KEY": "SomeStupidEncKey"
+    }
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
     "@babel/node": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
