--- a/package.json
+++ b/package.json
@@ -43,6 +43,15 @@
       "MONGODB_USERNAME": "alexkkirilovgames2@gmail.com",
       "MONGODB_PASS": "AxelF0x1",
       "CONF_KEY": "SomeStupidEncKey"
+    },
+    "start": {
+      "NODE_ENV": "development",
+      "PORT": 4567,
+      "HOST": "localhost",
+      "MONGODB_URI": "mongodb+srv://studentapitest:studentapitestadmin@studentapi.xqvch.mongodb.net/studentapi?retryWrites=true&w=majority",
+      "MONGODB_USERNAME": "alexkkirilovgames2@gmail.com",
+      "MONGODB_PASS": "AxelF0x1",
+      "CONF_KEY": "SomeStupidEncKey"
     }
   },
   "devDependencies": {
