--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "lint": "eslint .",
     "server": "nodemon index.js --exec babel-node",
-    "heroku-postbuild": "npm install",
+    "heroku-postbuild": "npm install && cd ui && npm install && react-scripts build",
     "start": "babel-node index.js",
     "test": "swagger project test",
     "dev": "nodemon --exec babel-node index.js --trace-warnings"
