--- a/ui/package.json
+++ b/ui/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "npm": "6.14.11"
+    "npm": "6.14.11",
+    "node": "14.15.4"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
