--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
+    "base-64": "^1.0.0",
     "bcrypt-nodejs": "0.0.3",
     "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.11.14",
     "nodemailer": "^6.4.17",
+    "react-router-dom": "^5.2.0",
     "read-excel-file": "^5.0.0",
     "swagger-jsdoc": "^6.0.2",
     "swagger-ui-express": "^4.1.6"
