Server (email and website name) validation + UI validation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "Kirilovi",
     "authorised",
     "firstname",
+    "instalatio",
+    "instalation",
     "lastame",
     "lastname",
     "readed",
