--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.11.14",
+    "node-schedule": "^2.0.0",
     "nodemailer": "^6.4.17",
+    "npm": "^7.13.0",
     "react-router-dom": "^5.2.0",
     "read-excel-file": "^5.0.0",
     "swagger-jsdoc": "^6.0.2",
