--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
     "node": "14.15.4"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.18",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.27",
     "@material-ui/icons": "^4.11.2",
