--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,6 @@
     "node": "14.17.1"
   },
   "dependencies": {
-    "@amcharts/amcharts4": "^4.10.18",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.27",
     "@material-ui/icons": "^4.11.2",
@@ -16,10 +15,13 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "base-64": "^1.0.0",
+    "generate-react-cli": "^7.0.4",
     "node-sass": "^5.0.0",
+    "plotly.js": "^2.6.4",
     "react": "^17.0.2",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
