--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.9.2",
     "fs": "0.0.1-security",
+    "generate-react-cli": "^7.0.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.11.14",
@@ -60,6 +61,6 @@
     "@babel/node": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.15"
   }
 }
