--- a/ui/package.json
+++ b/ui/package.json
@@ -22,8 +22,10 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-plotly.js": "^2.5.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.1"
   },
   "proxy": "http://localhost:4567",
