adding Employees data to the screen with some table view updates

--- a/ui/package.json
+++ b/ui/package.json
@@ -30,9 +30,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.1"
   },
-  "proxy": "http://localhost:4567",
+  "proxy": [
+    "http://localhost:3000",
+    "http://localhost:4567"
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
